--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,11 @@
     "# [IAPR][iapr]: Project\n",
     "\n",
     "\n",
-    "**Group ID:** xx\n",
+    "**Group ID:** 14\n",
     "\n",
-    "**Author 1 (sciper):** Student Name 1 (xxxxx)  \n",
-    "**Author 2 (sciper):** Student Name 2 (xxxxx)   \n",
-    "**Author 3 (sciper):** Student Name 3 (xxxxx)   \n",
+    "**Author 1 (sciper):** David Rüegg (218512)  \n",
+    "**Author 2 (sciper):** Yacine Derder (301994)   \n",
+    "**Author 3 (sciper):** Elsa Pariat (301964)   \n",
     "\n",
     "**Release date:** 27.04.2023\n",
     "\n",
@@ -368,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
